# mDNSBrowser

./: .gitignore  README.md  pyproject.toml  requirements.txt
assets/: default_icon.icns  default_icon_gray.icns
spec/: build_macos.sh
src/: __init__.py  app.py  os_qt_tools.py
